erDiagram
    AUTH_USER ||--o{ PAYMENT : receives
    AUTH_USER ||--o{ EXPENSE : captures
    AUTH_USER ||--o{ INVOICE : issues
    AUTH_USER ||--o{ FACE_RECOGNITION_ATTEMPT : captures
    AUTH_USER ||--o{ HISTORICAL_IMPORT : uploads
    AUTH_USER ||--o{ HISTORICAL_IMPORT : commits

    SITE ||--o{ STUDENT : has
    SITE ||--o{ COURT : has
    SITE ||--o{ CHARGE : bills
    SITE ||--o{ PAYMENT : records
    SITE ||--o{ EXPENSE : spends
    SITE ||--o{ INVOICE : emits
    SITE ||--o{ TOURNAMENT : hosts

    GUARDIAN ||--o{ STUDENT : represents
    GUARDIAN ||--o{ INVOICE : receives

    STUDENT ||--o{ CHARGE : owes
    STUDENT ||--o{ PAYMENT : pays
    STUDENT ||--o{ ATTENDANCE_RECORD : attends
    STUDENT ||--o{ DISCOUNT : gets
    STUDENT ||--o{ INVOICE : receives
    STUDENT ||--o{ FACE_RECOGNITION_ATTEMPT : matches

    TOURNAMENT ||--o{ TEAM : includes
    TOURNAMENT ||--o{ ROUND : has
    TEAM ||--o{ PLAYER : has
    TEAM ||--o{ CHARGE : owes
    TEAM ||--o{ PAYMENT : pays
    TEAM ||--o{ DISCOUNT : gets

    CHARGE ||--o{ PAYMENT : paid_by
    CHARGE ||--o{ DISCOUNT : adjusted_by
    CHARGE ||--o{ INVOICE : invoiced_by
    PAYMENT ||--o{ INVOICE : supports
    EXPENSE ||--o{ INVOICE : invoiced_by

    ATTENDANCE_SESSION ||--o{ ATTENDANCE_RECORD : contains
    ATTENDANCE_SESSION ||--o{ FACE_RECOGNITION_ATTEMPT : has
    HISTORICAL_IMPORT ||--o{ HISTORICAL_IMPORT_ROW : contains

    SITE {
        int id PK
        string name
        string code
        decimal latitude
        decimal longitude
    }
    STUDENT {
        int id PK
        int site_id FK
        int guardian_id FK
        string full_name
        date birth_date
        string group_name
        string status
        string photo
    }
    CHARGE {
        int id PK
        int site_id FK
        int student_id FK
        int team_id FK
        string concept
        decimal amount
        date due_date
        string status
    }
    PAYMENT {
        int id PK
        int charge_id FK
        int student_id FK
        int team_id FK
        string method
        string channel
        string status
        decimal amount
    }
    EXPENSE {
        int id PK
        int site_id FK
        string category
        decimal amount
        string status
    }
    INVOICE {
        int id PK
        uuid uuid
        string kind
        string status
        int charge_id FK
        int payment_id FK
        int expense_id FK
        decimal total
        text xml_content
    }
    FACE_RECOGNITION_ATTEMPT {
        int id PK
        int session_id FK
        int student_id FK
        boolean matched
        decimal confidence
        string engine
    }
    HISTORICAL_IMPORT {
        int id PK
        string original_file
        string original_filename
        string status
        int uploaded_by_id FK
        int committed_by_id FK
        string signature_name
        datetime committed_at
    }
    HISTORICAL_IMPORT_ROW {
        int id PK
        int batch_id FK
        string sheet_name
        int row_number
        json raw_data
        string normalized_type
        string status
    }
